[gd_scene load_steps=4 format=3 uid="uid://cjukdymmgs8ej"]

[ext_resource type="Script" path="res://scenes/user interface/laptop_menu.gd" id="1_67ye5"]
[ext_resource type="FontFile" uid="uid://denhbgf8lrhn2" path="res://fonts/PressStart2P-Regular.ttf" id="2_ruumj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xhwqv"]
bg_color = Color(0.325441, 0.325441, 0.325441, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="LaptopMenu" type="CanvasLayer"]
visible = false
script = ExtResource("1_67ye5")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.09
anchor_top = 0.11
anchor_right = 0.91
anchor_bottom = 0.89
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.615686)

[node name="MenuPanel" type="Panel" parent="."]
modulate = Color(0, 0.796078, 0.796078, 1)
self_modulate = Color(0, 0.796078, 0.796078, 1)
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopSection" type="HBoxContainer" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftChoices" type="VBoxContainer" parent="MenuPanel/VBoxContainer/TopSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7

[node name="Panel" type="Panel" parent="MenuPanel/VBoxContainer/TopSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MenuPanel/VBoxContainer/TopSection/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("2_ruumj")
theme_override_font_sizes/font_size = 8
text = "Welcome. Can use keyboard or mouse to select."
autowrap_mode = 2

[node name="BottomSection" type="Panel" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
theme_override_styles/panel = SubResource("StyleBoxFlat_xhwqv")

[node name="MarginContainer" type="MarginContainer" parent="MenuPanel/VBoxContainer/BottomSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="Label" type="Label" parent="MenuPanel/VBoxContainer/BottomSection/MarginContainer"]
custom_minimum_size = Vector2(210, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_ruumj")
theme_override_font_sizes/font_size = 8
autowrap_mode = 2
